# djnagouniquetoolkit

./: MANIFEST.in  README.md  r.req  setup.cfg  setup.py  tox.ini
src/djangouniquetoolkit/: __init__.py  apps.py
src/djangouniquetoolkit/migrations/: 0001_initial.py  0002_alter_username_id.py
src/djangouniquetoolkit/models/: __init__.py  alphabet.py  natural_number.py  username.py
src/djangouniquetoolkit/services/: __init__.py  base.py  get_unique_alphabet.py  get_unique_natural_number.py  get_unique_username.py
src/djangouniquetoolkit/tests/: test_alphabet.py  test_natural_number.py  test_username.py
